--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
 					<li><a href="portfolio.html">Portfolio</a></li>
 					<li><a href="skills.html">Skills</a></li>
-					<li><a href="exemployers.html">EX-EMPLOYERS</a></li>
+					<li><a href="exemployers.html">Ex-Employers</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
@@ -63,8 +63,8 @@
 						<div class="img mb-4" style="background-image: url(images/author.jpg);"></div>
 						<div class="desc">
 							<h2 class="subheading">Hello I'm</h2>
-							<h1 class="mb-4">Elen Henderson</h1>
-							<p class="mb-4">I am A Blogger Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<h1 class="mb-4">Parag Dave</h1>
+							<p class="mb-4">I am an Application Security Researcher, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 							<p><a href="#" class="btn-custom">More About Me <span class="ion-ios-arrow-forward"></span></a></p>
 						</div>
 					</div>
