--- a/exemployers.html
+++ b/exemployers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Elen - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Parag Dave - Security Researcher</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -36,9 +36,9 @@
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="photography.html">Photography</a></li>
-					<li class="colorlib-active"><a href="travel.html">Travel</a></li>
-					<li><a href="fashion.html">Fashion</a></li>
+					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="skills.html">Skills</a></li>
+					<li class="colorlib-active"><a href="exemployers.html">Ex-Employers</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
