--- a/skills.html
+++ b/skills.html
@@ -63,9 +63,8 @@
 						<div class="img mb-4" style="background-image: url(images/author.jpg);"></div>
 						<div class="desc">
 							<h2 class="subheading">Hello I'm</h2>
-							<h1 class="mb-4">Elen Henderson</h1>
-							<p class="mb-4">I am A Blogger Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							<p><a href="#" class="btn-custom">More About Me <span class="ion-ios-arrow-forward"></span></a></p>
+							<h1 class="mb-4">Parag Dave</h1>
+							<p class="mb-4">I am an Application Security Researcher lives in India. When I's not working with my compnay Qualitrix, I loves travelling, fun time with my loving daughter <b>Dhatri</b> and learning new things.</p>			
 						</div>
 					</div>
 				</div>
