--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
 						<div class="desc">
 							<h2 class="subheading">Hello I'm</h2>
 							<h1 class="mb-4">Parag Dave</h1>
-							<p class="mb-4">I am an Application Security Researcher lives in India. When I's not working with my compnay Qualitrix, I loves travelling, fun time with my loving daughter <b>Dhatri</b> and learning new things.</p>			
+							<p class="mb-4">I am an Application Security Researcher lives in India. When I am not working, I loves travelling, fun time with my loving daughter <b>Dhatri</b> and learning new things.</p>			
 							<ul class="ftco-social mt-3">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
